# MMapper

./: CMakeLists.txt  MMapper.cpp  MMapper.h  README.md  filehandle.cpp  filehandle.h  internal_includes.h  mmapper.cpp  mmapper.h  mmapper_platform.h
Samples/: CMakeLists.txt  compare_read_mmap.cpp  linux_benchmark.cpp  mmap_search.cpp
